# Relationship-between-sine-wave-and-circle

./: CMakeLists.txt  README.md  main.cpp
include/: draw.h  point.h
